--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "electron-prebuilt": "^1.4.13",
     "electron-rebuild": "^1.7.3",
     "electron-winstaller": "^2.6.4",
+    "gulp": "^4.0.2",
     "gulp-clean": "^0.4.0",
     "gulp-sequence": "^1.0.0",
     "gulp-zip": "^4.1.0"
